--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ scipy==1.5.4
 matplotlib==3.5.1
 seaborn==0.11.2
 requests==2.27.1
-click==8.0
+click
 beautifulsoup4==4.9.1
 bs4==0.0.1
 certifi==2020.4.5.1
