--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 pandas==1.3.5
-streamlit==0.62.1
+streamlit
 numpy==1.19.1
 scikit-learn==0.23.1
 scipy==1.5.4
@@ -17,5 +17,5 @@ schedule==0.6.0
 soupsieve==2.0.1
 urllib3==1.25.9
 nltk==3.6.5
-hydralit >=1.0.9
-hydralit_components >=1.0.4
+hydralit
+hydralit_components
